Fixed google login button spacing issue

--- a/files/login/index.css
+++ b/files/login/index.css
@@ -23,6 +23,9 @@ body {
 .googleLoginButtonWrapper {
 	width: 265px;
 	height: 44px;
+
+	display: flex;
+	justify-content: center;
 }
 
 .social-container {
